--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,45 @@ body {
     padding-top: 5%;
 
 }
+
+
+input[type=text], select, textarea {
+    width: 100%; 
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical;
+  }
+  
+  
+  input[type=submit] {
+    background-color: #042346;
+    color: white;
+    padding: 12px 20px; 
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+  }
+  
+  
+  input[type=submit]:hover {
+    background-color: #6a94c4;
+  }
+  
+  .contact-container {
+    border-radius: 5px;
+    background-color: #f0d6d6;
+    padding: 20px;
+  }
+  @media (max-width: 800px) {
+  .bottom-container {
+  flex-direction: column;
+  
+  
+  
+  
+  }
+  }
